--- a/src/assets/css/default.css
+++ b/src/assets/css/default.css
@@ -6,6 +6,13 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+html {
+  overflow: auto;
+}
+
+.clear-fix {
+  zoom: 1;
+}
 
 .clear-fix::after {
   clear: both;
@@ -16,35 +23,15 @@
   visibility: hidden;
 }
 
-.clear-fix {
-  zoom: 1;
-}
-
 /* 滚动条整体背景 */
 *::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
+  width: 1px;
 }
 
-/* 外层轨道 */
-*::-webkit-scrollbar-track {
-  border-radius: 5px;
-}
 
 /* 滚动条里面可以拖动的那部分 */
 *::-webkit-scrollbar-thumb {
   background: #aaa;
-  border-radius: 5px;
-}
-
-/* 滚动条里面可以拖动的那部分 */
-*::-webkit-scrollbar-thumb:hover {
-  background-color: #ccc;
-}
-
-/* 滚动条里面可以拖动的那部分 */
-*::-webkit-scrollbar-thumb:active {
-  background-color: #555;
 }
 
 /* 边角，两个滚动条交汇处 */
@@ -82,9 +69,9 @@ a {
 img {
   /* 禁止用户鼠标在页面上选中文字/图片等 */
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   /* 清除图片与图片、文字之间的缝隙缝隙 */
   vertical-align: middle;
 }
@@ -120,4 +107,8 @@ input {
   -moz-appearance: none;
   /* 在移动端iOS加上这个属性才能修改input样式 */
   appearance: none;
+}
+
+label {
+  margin-bottom: 0;
 }
