--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -9,13 +9,14 @@
   height: 100%;
 }
 .btn {
-  padding: 0.5em 1em;
+  width: 25vw;
+  height: 10vw;
   border: 3px solid #fff;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #fff;
-  font-size: 2vw;
+  font-size: 2.5vw;
   transition: all 0.25s;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -29,10 +30,5 @@
 }
 .btn:active {
   transition: all 0.1s;
-  transform: translateY(5%) scale(0.95);
-}
-
-.bgImg {
-  background: url("../img/lyb.png") no-repeat center center;
-  background-size: cover;
+  transform: translateY(10px) scale(0.99);
 }
